--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.8",
-    "dotenv": "^16.0.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
